Grammar/Gen/DcSharp/DcParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.7.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from /Users/chandlerstowell/Documents/git/DcSharp/Grammar/DcParser.g4 by ANTLR 4.7.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace DcSharp {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.7.2")]
[System.CLSCompliant(false)]
public partial class DcParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		DCLASS=1, STRUCT=2, TYPEDEF=3, KEYWORD=4, FROM=5, IMPORT=6, HISTORIC_KW=7, 
		BUILTIN_TYPE=8, STAR=9, FWSLASH=10, MODULUS=11, PERIOD=12, LPAREN=13, 
		RPAREN=14, HYPEN=15, COMMA=16, LSBRACKET=17, RSBRACKET=18, LBRACKET=19, 
		RBRACKET=20, SINGLE_QUOTE=21, DOUBLE_QUOTE=22, EQUALS=23, SEMICOLON=24, 
		COLON=25, DOUBLE_QUOTED_STRING=26, QUOTED_CHAR=27, SINGLE_QUOTED_STRING=28, 
		IDENTIFIER=29, NUMBER=30, CHAR=31, SINGLE_LINE_COMMENT=32, WS=33, STAR_IMPORT=34;
	public const int
		RULE_init = 0, RULE_dc_declaration = 1, RULE_import_statement = 2, RULE_module_path = 3, 
		RULE_module_name = 4, RULE_module_extension = 5, RULE_class_declaration = 6, 
		RULE_parent_class_list = 7, RULE_class_field = 8, RULE_struct_declaration = 9, 
		RULE_struct_field = 10, RULE_atomic_field = 11, RULE_field_parameters = 12, 
		RULE_molecular_field = 13, RULE_molecular_field_members = 14, RULE_keyword_declaration = 15, 
		RULE_keyword_list = 16, RULE_typedef_declaration = 17, RULE_parameter = 18, 
		RULE_array_specification = 19, RULE_parameter_range = 20, RULE_range_arguments = 21, 
		RULE_range_argument = 22, RULE_default_value = 23, RULE_value_constant = 24, 
		RULE_number_constant = 25, RULE_string_constant = 26, RULE_struct_constant = 27, 
		RULE_array_constant = 28, RULE_array_value_constant = 29;
	public static readonly string[] ruleNames = {
		"init", "dc_declaration", "import_statement", "module_path", "module_name", 
		"module_extension", "class_declaration", "parent_class_list", "class_field", 
		"struct_declaration", "struct_field", "atomic_field", "field_parameters", 
		"molecular_field", "molecular_field_members", "keyword_declaration", "keyword_list", 
		"typedef_declaration", "parameter", "array_specification", "parameter_range", 
		"range_arguments", "range_argument", "default_value", "value_constant", 
		"number_constant", "string_constant", "struct_constant", "array_constant", 
		"array_value_constant"
	};

	private static readonly string[] _LiteralNames = {
		null, "'dclass'", "'struct'", "'typedef'", "'keyword'", "'from'", "'import'", 
		null, null, "'*'", "'/'", "'%'", "'.'", "'('", "')'", "'-'", "','", "'['", 
		"']'", "'{'", "'}'", "'''", "'\"'", "'='", "';'", "':'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "DCLASS", "STRUCT", "TYPEDEF", "KEYWORD", "FROM", "IMPORT", "HISTORIC_KW", 
		"BUILTIN_TYPE", "STAR", "FWSLASH", "MODULUS", "PERIOD", "LPAREN", "RPAREN", 
		"HYPEN", "COMMA", "LSBRACKET", "RSBRACKET", "LBRACKET", "RBRACKET", "SINGLE_QUOTE", 
		"DOUBLE_QUOTE", "EQUALS", "SEMICOLON", "COLON", "DOUBLE_QUOTED_STRING", 
		"QUOTED_CHAR", "SINGLE_QUOTED_STRING", "IDENTIFIER", "NUMBER", "CHAR", 
		"SINGLE_LINE_COMMENT", "WS", "STAR_IMPORT"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "DcParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static DcParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public DcParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public DcParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class InitContext : ParserRuleContext {
		public Import_statementContext[] import_statement() {
			return GetRuleContexts<Import_statementContext>();
		}
		public Import_statementContext import_statement(int i) {
			return GetRuleContext<Import_statementContext>(i);
		}
		public Dc_declarationContext[] dc_declaration() {
			return GetRuleContexts<Dc_declarationContext>();
		}
		public Dc_declarationContext dc_declaration(int i) {
			return GetRuleContext<Dc_declarationContext>(i);
		}
		public InitContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_init; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDcParserListener typedListener = listener as IDcParserListener;
			if (typedListener != null) typedListener.EnterInit(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDcParserListener typedListener = listener as IDcParserListener;
			if (typedListener != null) typedListener.ExitInit(this);
		}
	}

	[RuleVersion(0)]
	public InitContext init() {
		InitContext _localctx = new InitContext(Context, State);
		EnterRule(_localctx, 0, RULE_init);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 63;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==FROM || _la==IMPORT) {
				{
				{
				State = 60; import_statement();
				}
				}
				State = 65;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 69;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << DCLASS) | (1L << STRUCT) | (1L << TYPEDEF) | (1L << KEYWORD))) != 0)) {
				{
				{
				State = 66; dc_declaration();
				}
				}
				State = 71;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Dc_declarationContext : ParserRuleContext {
		public ITerminalNode SEMICOLON() { return GetToken(DcParser.SEMICOLON, 0); }
		public Typedef_declarationContext typedef_declaration() {
			return GetRuleContext<Typedef_declarationContext>(0);
		}
		public Class_declarationContext class_declaration() {
			return GetRuleContext<Class_declarationContext>(0);
		}
		public Struct_declarationContext struct_declaration() {
			return GetRuleContext<Struct_declarationContext>(0);
		}
		public Keyword_declarationContext keyword_declaration() {
			return GetRuleContext<Keyword_declarationContext>(0);
		}
		public Dc_declarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_dc_declaration; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDcParserListener typedListener = listener as IDcParserListener;
			if (typedListener != null) typedListener.EnterDc_declaration(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDcParserListener typedListener = listener as IDcParserListener;
			if (typedListener != null) typedListener.ExitDc_declaration(this);
		}
	}

	[RuleVersion(0)]
	public Dc_declarationContext dc_declaration() {
		Dc_declarationContext _localctx = new Dc_declarationContext(Context, State);
		EnterRule(_localctx, 2, RULE_dc_declaration);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 76;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case TYPEDEF:
				{
				State = 72; typedef_declaration();
				}
				break;
			case DCLASS:
				{
				State = 73; class_declaration();
				}
				break;
			case STRUCT:
				{
				State = 74; struct_declaration();
				}
				break;
			case KEYWORD:
				{
				State = 75; keyword_declaration();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			State = 78; Match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Import_statementContext : ParserRuleContext {
		public ITerminalNode FROM() { return GetToken(DcParser.FROM, 0); }
		public Module_pathContext module_path() {
			return GetRuleContext<Module_pathContext>(0);
		}
		public ITerminalNode IMPORT() { return GetToken(DcParser.IMPORT, 0); }
		public Module_nameContext module_name() {
			return GetRuleContext<Module_nameContext>(0);
		}
		public Module_extensionContext module_extension() {
			return GetRuleContext<Module_extensionContext>(0);
		}
		public Import_statementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_import_statement; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDcParserListener typedListener = listener as IDcParserListener;
			if (typedListener != null) typedListener.EnterImport_statement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDcParserListener typedListener = listener as IDcParserListener;
			if (typedListener != null) typedListener.ExitImport_statement(this);
		}
	}

	[RuleVersion(0)]
	public Import_statementContext import_statement() {
		Import_statementContext _localctx = new Import_statementContext(Context, State);
		EnterRule(_localctx, 4, RULE_import_statement);
		int _la;
		try {
			State = 90;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case FROM:
				EnterOuterAlt(_localctx, 1);
				{
				State = 80; Match(FROM);
				State = 81; module_path();
				State = 82; Match(IMPORT);
				State = 83; module_name();
				}
				break;
			case IMPORT:
				EnterOuterAlt(_localctx, 2);
				{
				State = 85; Match(IMPORT);
				State = 86; module_path();
				State = 88;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==FWSLASH) {
					{
					State = 87; module_extension();
					}
				}

				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Module_pathContext : ParserRuleContext {
		public ITerminalNode[] IDENTIFIER() { return GetTokens(DcParser.IDENTIFIER); }
		public ITerminalNode IDENTIFIER(int i) {
			return GetToken(DcParser.IDENTIFIER, i);
		}
		public ITerminalNode[] PERIOD() { return GetTokens(DcParser.PERIOD); }
		public ITerminalNode PERIOD(int i) {
			return GetToken(DcParser.PERIOD, i);
		}
		public Module_pathContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_module_path; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDcParserListener typedListener = listener as IDcParserListener;
			if (typedListener != null) typedListener.EnterModule_path(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDcParserListener typedListener = listener as IDcParserListener;
			if (typedListener != null) typedListener.ExitModule_path(this);
		}
	}

	[RuleVersion(0)]
	public Module_pathContext module_path() {
		Module_pathContext _localctx = new Module_pathContext(Context, State);
		EnterRule(_localctx, 6, RULE_module_path);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 92; Match(IDENTIFIER);
			State = 97;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==PERIOD) {
				{
				{
				State = 93; Match(PERIOD);
				State = 94; Match(IDENTIFIER);
				}
				}
				State = 99;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Module_nameContext : ParserRuleContext {
		public ITerminalNode STAR_IMPORT() { return GetToken(DcParser.STAR_IMPORT, 0); }
		public ITerminalNode IDENTIFIER() { return GetToken(DcParser.IDENTIFIER, 0); }
		public Module_extensionContext module_extension() {
			return GetRuleContext<Module_extensionContext>(0);
		}
		public Module_nameContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_module_name; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDcParserListener typedListener = listener as IDcParserListener;
			if (typedListener != null) typedListener.EnterModule_name(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDcParserListener typedListener = listener as IDcParserListener;
			if (typedListener != null) typedListener.ExitModule_name(this);
		}
	}

	[RuleVersion(0)]
	public Module_nameContext module_name() {
		Module_nameContext _localctx = new Module_nameContext(Context, State);
		EnterRule(_localctx, 8, RULE_module_name);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 105;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case STAR_IMPORT:
				{
				State = 100; Match(STAR_IMPORT);
				}
				break;
			case IDENTIFIER:
				{
				{
				State = 101; Match(IDENTIFIER);
				State = 103;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==FWSLASH) {
					{
					State = 102; module_extension();
					}
				}

				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Module_extensionContext : ParserRuleContext {
		public ITerminalNode[] FWSLASH() { return GetTokens(DcParser.FWSLASH); }
		public ITerminalNode FWSLASH(int i) {
			return GetToken(DcParser.FWSLASH, i);
		}
		public ITerminalNode[] IDENTIFIER() { return GetTokens(DcParser.IDENTIFIER); }
		public ITerminalNode IDENTIFIER(int i) {
			return GetToken(DcParser.IDENTIFIER, i);
		}
		public Module_extensionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_module_extension; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDcParserListener typedListener = listener as IDcParserListener;
			if (typedListener != null) typedListener.EnterModule_extension(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDcParserListener typedListener = listener as IDcParserListener;
			if (typedListener != null) typedListener.ExitModule_extension(this);
		}
	}

	[RuleVersion(0)]
	public Module_extensionContext module_extension() {
		Module_extensionContext _localctx = new Module_extensionContext(Context, State);
		EnterRule(_localctx, 10, RULE_module_extension);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 109;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 107; Match(FWSLASH);
				State = 108; Match(IDENTIFIER);
				}
				}
				State = 111;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==FWSLASH );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Class_declarationContext : ParserRuleContext {
		public IToken name;
		public Parent_class_listContext parents;
		public ITerminalNode DCLASS() { return GetToken(DcParser.DCLASS, 0); }
		public ITerminalNode LBRACKET() { return GetToken(DcParser.LBRACKET, 0); }
		public ITerminalNode RBRACKET() { return GetToken(DcParser.RBRACKET, 0); }
		public ITerminalNode IDENTIFIER() { return GetToken(DcParser.IDENTIFIER, 0); }
		public ITerminalNode COLON() { return GetToken(DcParser.COLON, 0); }
		public Class_fieldContext[] class_field() {
			return GetRuleContexts<Class_fieldContext>();
		}
		public Class_fieldContext class_field(int i) {
			return GetRuleContext<Class_fieldContext>(i);
		}
		public ITerminalNode[] SEMICOLON() { return GetTokens(DcParser.SEMICOLON); }
		public ITerminalNode SEMICOLON(int i) {
			return GetToken(DcParser.SEMICOLON, i);
		}
		public Parent_class_listContext parent_class_list() {
			return GetRuleContext<Parent_class_listContext>(0);
		}
		public Class_declarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_class_declaration; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDcParserListener typedListener = listener as IDcParserListener;
			if (typedListener != null) typedListener.EnterClass_declaration(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDcParserListener typedListener = listener as IDcParserListener;
			if (typedListener != null) typedListener.ExitClass_declaration(this);
		}
	}

	[RuleVersion(0)]
	public Class_declarationContext class_declaration() {
		Class_declarationContext _localctx = new Class_declarationContext(Context, State);
		EnterRule(_localctx, 12, RULE_class_declaration);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 113; Match(DCLASS);
			State = 114; _localctx.name = Match(IDENTIFIER);
			State = 117;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==COLON) {
				{
				State = 115; Match(COLON);
				State = 116; _localctx.parents = parent_class_list();
				}
			}

			State = 119; Match(LBRACKET);
			State = 125;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==IDENTIFIER) {
				{
				{
				State = 120; class_field();
				State = 121; Match(SEMICOLON);
				}
				}
				State = 127;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 128; Match(RBRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Parent_class_listContext : ParserRuleContext {
		public IToken name;
		public Parent_class_listContext next;
		public ITerminalNode IDENTIFIER() { return GetToken(DcParser.IDENTIFIER, 0); }
		public ITerminalNode COMMA() { return GetToken(DcParser.COMMA, 0); }
		public Parent_class_listContext parent_class_list() {
			return GetRuleContext<Parent_class_listContext>(0);
		}
		public Parent_class_listContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_parent_class_list; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDcParserListener typedListener = listener as IDcParserListener;
			if (typedListener != null) typedListener.EnterParent_class_list(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDcParserListener typedListener = listener as IDcParserListener;
			if (typedListener != null) typedListener.ExitParent_class_list(this);
		}
	}

	[RuleVersion(0)]
	public Parent_class_listContext parent_class_list() {
		Parent_class_listContext _localctx = new Parent_class_listContext(Context, State);
		EnterRule(_localctx, 14, RULE_parent_class_list);
		try {
			State = 134;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,11,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 130; _localctx.name = Match(IDENTIFIER);
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 131; _localctx.name = Match(IDENTIFIER);
				State = 132; Match(COMMA);
				State = 133; _localctx.next = parent_class_list();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Class_fieldContext : ParserRuleContext {
		public Atomic_fieldContext atomic_field() {
			return GetRuleContext<Atomic_fieldContext>(0);
		}
		public Molecular_fieldContext molecular_field() {
			return GetRuleContext<Molecular_fieldContext>(0);
		}
		public Class_fieldContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_class_field; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDcParserListener typedListener = listener as IDcParserListener;
			if (typedListener != null) typedListener.EnterClass_field(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDcParserListener typedListener = listener as IDcParserListener;
			if (typedListener != null) typedListener.ExitClass_field(this);
		}
	}

	[RuleVersion(0)]
	public Class_fieldContext class_field() {
		Class_fieldContext _localctx = new Class_fieldContext(Context, State);
		EnterRule(_localctx, 16, RULE_class_field);
		try {
			State = 138;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,12,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 136; atomic_field();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 137; molecular_field();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Struct_declarationContext : ParserRuleContext {
		public IToken name;
		public ITerminalNode STRUCT() { return GetToken(DcParser.STRUCT, 0); }
		public ITerminalNode LBRACKET() { return GetToken(DcParser.LBRACKET, 0); }
		public ITerminalNode RBRACKET() { return GetToken(DcParser.RBRACKET, 0); }
		public ITerminalNode IDENTIFIER() { return GetToken(DcParser.IDENTIFIER, 0); }
		public Struct_fieldContext[] struct_field() {
			return GetRuleContexts<Struct_fieldContext>();
		}
		public Struct_fieldContext struct_field(int i) {
			return GetRuleContext<Struct_fieldContext>(i);
		}
		public ITerminalNode[] SEMICOLON() { return GetTokens(DcParser.SEMICOLON); }
		public ITerminalNode SEMICOLON(int i) {
			return GetToken(DcParser.SEMICOLON, i);
		}
		public Struct_declarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_struct_declaration; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDcParserListener typedListener = listener as IDcParserListener;
			if (typedListener != null) typedListener.EnterStruct_declaration(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDcParserListener typedListener = listener as IDcParserListener;
			if (typedListener != null) typedListener.ExitStruct_declaration(this);
		}
	}

	[RuleVersion(0)]
	public Struct_declarationContext struct_declaration() {
		Struct_declarationContext _localctx = new Struct_declarationContext(Context, State);
		EnterRule(_localctx, 18, RULE_struct_declaration);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 140; Match(STRUCT);
			State = 141; _localctx.name = Match(IDENTIFIER);
			State = 142; Match(LBRACKET);
			State = 148;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==BUILTIN_TYPE || _la==IDENTIFIER) {
				{
				{
				State = 143; struct_field();
				State = 144; Match(SEMICOLON);
				}
				}
				State = 150;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 151; Match(RBRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Struct_fieldContext : ParserRuleContext {
		public ParameterContext p;
		public Class_fieldContext class_field() {
			return GetRuleContext<Class_fieldContext>(0);
		}
		public ParameterContext parameter() {
			return GetRuleContext<ParameterContext>(0);
		}
		public Struct_fieldContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_struct_field; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDcParserListener typedListener = listener as IDcParserListener;
			if (typedListener != null) typedListener.EnterStruct_field(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDcParserListener typedListener = listener as IDcParserListener;
			if (typedListener != null) typedListener.ExitStruct_field(this);
		}
	}

	[RuleVersion(0)]
	public Struct_fieldContext struct_field() {
		Struct_fieldContext _localctx = new Struct_fieldContext(Context, State);
		EnterRule(_localctx, 20, RULE_struct_field);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 155;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,14,Context) ) {
			case 1:
				{
				State = 153; class_field();
				}
				break;
			case 2:
				{
				State = 154; _localctx.p = parameter();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Atomic_fieldContext : ParserRuleContext {
		public IToken name;
		public Field_parametersContext parameters;
		public Keyword_listContext keywords;
		public ITerminalNode LPAREN() { return GetToken(DcParser.LPAREN, 0); }
		public ITerminalNode RPAREN() { return GetToken(DcParser.RPAREN, 0); }
		public ITerminalNode IDENTIFIER() { return GetToken(DcParser.IDENTIFIER, 0); }
		public Field_parametersContext field_parameters() {
			return GetRuleContext<Field_parametersContext>(0);
		}
		public Keyword_listContext keyword_list() {
			return GetRuleContext<Keyword_listContext>(0);
		}
		public Atomic_fieldContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_atomic_field; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDcParserListener typedListener = listener as IDcParserListener;
			if (typedListener != null) typedListener.EnterAtomic_field(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDcParserListener typedListener = listener as IDcParserListener;
			if (typedListener != null) typedListener.ExitAtomic_field(this);
		}
	}

	[RuleVersion(0)]
	public Atomic_fieldContext atomic_field() {
		Atomic_fieldContext _localctx = new Atomic_fieldContext(Context, State);
		EnterRule(_localctx, 22, RULE_atomic_field);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 157; _localctx.name = Match(IDENTIFIER);
			State = 158; Match(LPAREN);
			State = 160;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==BUILTIN_TYPE || _la==IDENTIFIER) {
				{
				State = 159; _localctx.parameters = field_parameters();
				}
			}

			State = 162; Match(RPAREN);
			State = 164;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==HISTORIC_KW || _la==IDENTIFIER) {
				{
				State = 163; _localctx.keywords = keyword_list();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
